test/types/POD/elliot/varNotPOD.good
varNotPOD.chpl:4: error: Could not coerce 'R' to 'POD' in initialization
